--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -136,9 +136,9 @@ bind=$mainMod CTRL,E,exec,cliphist list | rofi -dmenu | cliphist wipe
 
 bind=$mainMod CTRL,P,exec,hyprpicker -a -f hex
 
-bind =, PRINT, exec, hyprshot -z -m output
-bind = $mainMod, PRINT, exec, hyprshot -z -m window
-bind = $shiftMod, PRINT, exec, hyprshot -z -m region
+bind =, PRINT, exec, hyprshot --freeze -m output -t 7500
+bind = $mainMod, PRINT, exec, hyprshot -z -m window -t 7500
+bind = $shiftMod, PRINT, exec, hyprshot -z -m region -t 7500
 
 bind =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
