--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -75,7 +75,8 @@ bind = $mainMod, D, exec, $menu
 
 bind = $mainMod $shiftMod, L, exec, hyprlock
 
-bind = $mainMod $shiftMod, W, exec, wlogout
+#bind = $mainMod $shiftMod, W, exec, wlogout
+bind = $mainMod TAB, W, exec, wlogout
 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, U, togglesplit, # dwindle
@@ -137,8 +138,8 @@ bind=$mainMod CTRL,E,exec,cliphist list | rofi -dmenu | cliphist wipe
 bind=$mainMod CTRL,P,exec,hyprpicker -a -f hex
 
 bind =, PRINT, exec, hyprshot --freeze -m output -t 7500
-bind = $mainMod, PRINT, exec, hyprshot -z -m window -t 7500
-bind = $shiftMod, PRINT, exec, hyprshot -z -m region -t 7500
+bind = $mainMod, PRINT, exec, hyprshot --freeze -m window -t 7500
+bind = $shiftMod, PRINT, exec, hyprshot --freeze -m region -t 7500
 
 bind =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
