modified permision settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,6 +38,7 @@ ecosystem:enforce_permissions = true
 
 permission = /usr/bin/grim, screencopy, allow
 permission = /usr/bin/hyprshot, screencopy, allow
+permission = /usr/bin/hyprpicker, screencopy, allow
 permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, ask
 
 input {
@@ -75,7 +76,6 @@ bind = $mainMod, D, exec, $menu
 
 bind = $mainMod $shiftMod, L, exec, hyprlock
 
-#bind = $mainMod $shiftMod, W, exec, wlogout
 bind = $mainMod TAB, W, exec, wlogout
 
 bind = $mainMod, P, pseudo, # dwindle
