Added permision to restrict loading of plugins

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,6 +41,8 @@ permission = /usr/bin/hyprshot, screencopy, allow
 permission = /usr/bin/hyprpicker, screencopy, allow
 permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, ask
 
+permission = /usr/bin/hyprctl, plugin, deny
+
 input {
     kb_layout = us
     kb_variant =
