Fixed issue with waybar not auto-starting

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,17 @@
+$mainMod = SUPER
+$terminal = kitty
+$menu = rofi -show drun run combi
+
+$fileManager = dolphin
+$browser = xdg-open about:profiles
+
+env = XCURSOR_SIZE,24
+env = QT_QPA_PLATFORMTHEME,qt6ct
+
 exec-once = systemctl --user start plasma-polkit-agent
 
-exec-once = waybar & nm-applet --indicator
+exec-once = waybar 
+exec-once = nm-applet --indicator
 
 exec-once = hypridle
 
@@ -23,16 +34,6 @@ exec-once = emacs
 exec-once = firefox
 
 exec-once = nwg-wrapper -t bindings.pango -c style.css -p left -a start -mt 20 -ml 20 -j left
-
-$mainMod = SUPER
-$terminal = kitty
-$menu = rofi -show drun run combi
-
-$fileManager = dolphin
-$browser = xdg-open about:profiles
-
-env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
 
 ecosystem:enforce_permissions = true
 
