--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -76,6 +76,7 @@ bind = $mainMod, E, exec, emacsclient -c
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
+bind = $mainMod $shiftMod, C, exec, launch-waybar && launch-nwg-wrapper
 
 bind = $mainMod $shiftMod, L, exec, hyprlock
 
