Updated Hyprland config to fix issues with keybindings not properly launching the emacsclient.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,7 +29,7 @@ exec-once = ~/.config/hypr/scripts/low_battery.sh
 
 exec-once = /usr/bin/emacs --daemon &
 
-exec-once = emacs
+exec-once = emacsclient -c -a ""
 
 exec-once = firefox
 
@@ -72,7 +72,7 @@ device {
 
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive, 
-bind = $mainMod, E, exec, emacsclient -c
+bind = $mainMod, E, exec, emacsclient -c -a ""
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
