Fix Emacsclient issue
Fix an issue where emacsclient does not properly load my custom configuration from README.org and practically braking my Hyprland keybindings for emacsclient.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,9 +27,7 @@ exec-once = playerctld
 
 exec-once = ~/.config/hypr/scripts/low_battery.sh
 
-exec-once = /usr/bin/emacs --daemon &
-
-exec-once = emacsclient -c -a ""
+exec-once = ~/.local/bin/serv-emacs
 
 exec-once = firefox
 
