--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -177,6 +177,7 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 6
+   #screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
