--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,6 +27,8 @@ exec-once = playerctld
 
 exec-once = ~/.config/hypr/scripts/low_battery.sh
 
+exec-once = ~/dotfiles/hypr/scripts/blue-light
+
 exec-once = ~/.local/bin/serv-emacs
 
 exec-once = firefox
@@ -177,7 +179,7 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 6
-   #screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+   ##screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
