--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -182,7 +182,7 @@ decoration {
 
     rounding = 6
 
-##screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
@@ -198,7 +198,14 @@ decoration {
 }
 
 group {
+      col.border_active = rgba(bd93f9ff) rgba(ff79c6ff) rgba(ffb86caa) rgba(8be9fdaa) 45deg
     groupbar {
+        enabled = true
+        gradients = true
+        font_size = 16
+        font_family = JetBrains Mono
+        height = 24
+        text_color = rgba(f8f8f2ff) #white
         col.active = rgb(bd93f9) rgb(44475a) 90deg
         col.inactive = rgba(282a36dd)
     }
