--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,7 +29,7 @@ exec-once = ~/.config/hypr/scripts/low_battery.sh
 
 exec-once = ~/dotfiles/hypr/scripts/blue-light
 
-exec-once = ~/dotfiles/hypr/scripts/schedule-shaders.sh
+exec-once = ~/.local/bin/greyscale
 
 exec-once = ~/.local/bin/serv-emacs
 
