Move Waybar config
Moved waybar CSS file from style-test.css to style.css

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -182,7 +182,7 @@ decoration {
 
     rounding = 6
 
-######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
@@ -198,7 +198,8 @@ decoration {
 }
 
 group {
-      col.border_active = rgba(bd93f9ff) rgba(ff79c6ff) rgba(ffb86caa) rgba(8be9fdaa) 45deg
+      #col.border_active = rgba(bd93f9ff) rgba(ff79c6ff) rgba(ffb86caa) rgba(8be9fdaa) 45deg
+      col.border_active = rgba(bd93f9ff) rgba(8be9fdaa) 45deg
     groupbar {
         enabled = true
         gradients = true
