--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,7 +33,7 @@ exec-once = ~/.local/bin/greyscale
 
 exec-once = ~/.local/bin/serv-emacs
 
-exec-once = firefox
+exec-once = $browser
 
 exec-once = nwg-wrapper -t bindings.pango -c style.css -p left -a start -mt 20 -ml 20 -j left
 
@@ -182,7 +182,7 @@ decoration {
 
     rounding = 6
 
-#screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
