--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 $mainMod = SUPER
 $terminal = kitty
 $menu = rofi -show drun run combi
+$filemenu = rofi -show recursivebrowser filebrowser
 
 $fileManager = dolphin
 $browser = xdg-open about:profiles
@@ -78,6 +79,7 @@ bind = $mainMod, E, exec, emacsclient -c -a ""
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
+bind = $mainMod $shiftmod, D, exec, $filemenu
 bind = $mainMod $shiftMod, C, exec, launch-waybar && launch-nwg-wrapper
 
 bind = $mainMod $shiftMod, L, exec, hyprlock
@@ -182,7 +184,7 @@ decoration {
 
     rounding = 6
 
-##screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
