--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -134,20 +134,40 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod, G, togglegroup,
+bind = $mainMod, N, changegroupactive,
 
-bind = $mainMod ESC, G, movewindoworgroup,
-bind = $mainMod ESC, F, lockgroups,
-bind = $mainMod ESC, N, changegroupactive,
+bind = $mainMod $shiftmod, G, movewindoworgroup,
+bind = $mainMod $shiftmod, F, lockgroups,
 
-bind=$mainMod CTRL,V,exec,cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind=$mainMod CTRL,D,exec,cliphist list | rofi -dmenu | cliphist delete
-bind=$mainMod CTRL,E,exec,cliphist list | rofi -dmenu | cliphist wipe
+#bind=$mainMod CTRL,V,exec,cliphist list | rofi -dmenu | cliphist decode | wl-copy
+#bind=$mainMod CTRL,D,exec,cliphist list | rofi -dmenu | cliphist delete
+#bind=$mainMod CTRL,E,exec,cliphist list | rofi -dmenu | cliphist wipe
 
-bind=$mainMod CTRL,P,exec,hyprpicker -a -f hex
+bind = ALT, C, submap, Clipboard
+submap = Clipboard
 
-bind =, PRINT, exec, hyprshot --freeze -m output -t 7500
-bind = $mainMod, PRINT, exec, hyprshot --freeze -m window -t 7500
-bind = $shiftMod, PRINT, exec, hyprshot --freeze -m region -t 7500
+bind =, V,exec,cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind =, D,exec,cliphist list | rofi -dmenu | cliphist delete
+bind =, E,exec,cliphist list | rofi -dmenu | cliphist wipe
+
+bind =, delete, submap, reset 
+submap = reset
+
+bind = ALT, P, submap, Screencopy
+submap = Screencopy
+
+bind =, O, exec, hyprshot --freeze -m output -t 7500
+bind =, W, exec, hyprshot --freeze -m window -t 7500
+bind =, R, exec, hyprshot --freeze -m region -t 7500
+
+bind=, P,exec,hyprpicker -a -f hex
+
+bind =, delete, submap, reset 
+submap = reset
+
+# bind =, PRINT, exec, hyprshot --freeze -m output -t 7500
+ #bind = $mainMod, PRINT, exec, hyprshot --freeze -m window -t 7500
+ #bind = $shiftMod, PRINT, exec, hyprshot --freeze -m region -t 7500
 
 bind =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -184,7 +204,7 @@ decoration {
 
     rounding = 6
 
-########screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
