--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -14,6 +14,7 @@
        "tray",
        "hyprland/workspaces",
        "custom/media",
+    "hyprland/submap",
    ],
 
 "modules-center": [
@@ -72,16 +73,20 @@
 "custom/media": {
         "format": "{0} {1}",
         "return-type": "json",
-        "max-length": 40,
+        "max-length": 20,
         "format-icons": {
             "spotify": "",
             "default": "🎜",
         },
         "escape": true,
 	"on-click": "playerctl play-pause",	    
-        "exec": "$HOME/.config/waybar/scripts/mediaplayer.py 2> /dev/null" // Script in resources folder
+        "exec": "$HOME/dotfiles/waybar/scripts/mediaplayer.py 2> /dev/null" // Script in resources folder
         // "exec": "$HOME/.config/waybar/scripts/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
     },
+
+"hyprland/submap": {
+  "format": "Submap: {}"
+},
 
 "idle_inhibitor": {
         "format": "{icon}",
