--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -156,9 +156,9 @@ submap = reset
 bind = ALT, P, submap, Screencopy
 submap = Screencopy
 
-bind =, O, exec, hyprshot --freeze -m output -t 7500
-bind =, W, exec, hyprshot --freeze -m window -t 7500
-bind =, R, exec, hyprshot --freeze -m region -t 7500
+bind =, O, exec, hyprshot --freeze -m output -t 7500 -o ~/Pictures/Screenshots/
+bind =, W, exec, hyprshot --freeze -m window -t 7500 -o ~/Pictures/Screenshots/
+bind =, R, exec, hyprshot --freeze -m region -t 7500 -o ~/Pictures/Screenshots/
 
 bind=, P,exec,hyprpicker -a -f hex
 
@@ -204,7 +204,7 @@ decoration {
 
     rounding = 6
 
-#####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
