--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -80,7 +80,7 @@ bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
 bind = $mainMod $shiftmod, D, exec, $filemenu
-bind = $mainMod $shiftMod, C, exec, launch-waybar && launch-nwg-wrapper
+bind = $mainMod $shiftmod, C, exec, ~/dotfiles/hypr/scripts/reloads.sh
 
 bind = $mainMod $shiftMod, L, exec, hyprlock
 
@@ -204,7 +204,7 @@ decoration {
 
     rounding = 6
 
-###################screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+####screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
