--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -204,7 +204,7 @@ decoration {
 
     rounding = 6
 
-######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 #blur {
     #    enabled = true
