--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 $mainMod = SUPER
 $terminal = kitty
-$menu = rofi -show drun run combi
-$filemenu = rofi -show recursivebrowser filebrowser
+$menu = rofi -show combi -combi-modi drun,run,recursivebrowser 
+$filemenu = rofi -show combi -combi-modi window,recursivebrowser,ssh
 
 $fileManager = dolphin
 $browser = xdg-open about:profiles
@@ -79,7 +79,7 @@ bind = $mainMod, E, exec, emacsclient -c -a ""
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
-bind = $mainMod $shiftmod, D, exec, $filemenu
+bind = ALT, TAB, exec, $filemenu
 bind = $mainMod $shiftmod, C, exec, ~/dotfiles/hypr/scripts/reloads.sh
 
 bind = $mainMod $shiftMod, L, exec, hyprlock
@@ -296,3 +296,5 @@ gestures {
 windowrulev2 = bordercolor rgb(ff5555),xwayland:1
 
 windowrulev2 = suppressevent maximize, class:.*
+
+windowrulev2 = float,class:^(yad)$
