Continued work on Gruvbox theme
Added gruvbox styyling option for hyprland grouped windows

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -206,16 +206,28 @@ decoration {
 
 #screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
-#blur {
-    #    enabled = true
-    #    size = 3
-    #    passes = 1
-    #}
+blur {
+        enabled = true
+        size = 8
+	ignore_opacity = true
+	new_optimizations = true
+        passes = 1
+    }
 
 #    drop_shadow = yes
 #    shadow_range = 4
 #    shadow_render_power = 3
 #    col.shadow = rgba(1a1a1aee)
+
+}
+
+general {
+    col.active_border = rgb(44475a) rgb(bd93f9) 90deg
+    col.inactive_border = rgba(44475aaa)
+    col.nogroup_border = rgba(282a36dd)
+    col.nogroup_border_active = rgb(bd93f9) rgb(44475a) 90deg
+    no_border_on_floating = false
+    border_size = 2
 
 }
 
@@ -232,16 +244,6 @@ group {
         col.active = rgb(bd93f9) rgb(44475a) 90deg
         col.inactive = rgba(282a36dd)
     }
-}
-
-general {
-    col.active_border = rgb(44475a) rgb(bd93f9) 90deg
-    col.inactive_border = rgba(44475aaa)
-    col.nogroup_border = rgba(282a36dd)
-    col.nogroup_border_active = rgb(bd93f9) rgb(44475a) 90deg
-    no_border_on_floating = false
-    border_size = 2
-
 }
 
 decoration:shadow:enabled = false
