New file manager variable
Swapped out Dolphin for Thunar as my default file manager in my Hyprland configuration>

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,7 +3,7 @@ $terminal = kitty
 $menu = rofi -show combi -combi-modi drun,run,recursivebrowser 
 $filemenu = rofi -show combi -combi-modi window,recursivebrowser,ssh
 
-$fileManager = dolphin
+$fileManager = thunar
 $browser = xdg-open about:profiles
 
 env = XCURSOR_SIZE,24
@@ -204,7 +204,7 @@ decoration {
 
     rounding = 6
 
-#screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 blur {
         enabled = true
