--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,7 +1,8 @@
 $mainMod = SUPER
 $terminal = kitty
 $menu = rofi -show combi -combi-modi drun,run,recursivebrowser 
-$filemenu = rofi -show combi -combi-modi window,recursivebrowser,ssh
+$filemenu = rofi -show combi -combi-modi window,recursivebrowser,ssh 
+$editor = emacsclient -ca ""
 
 $fileManager = thunar
 $browser = xdg-open about:profiles
@@ -75,7 +76,7 @@ device {
 
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive, 
-bind = $mainMod, E, exec, emacsclient -c -a ""
+bind = $mainMod, E, exec, $editor
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
@@ -204,7 +205,7 @@ decoration {
 
     rounding = 6
 
-#screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+##############screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 blur {
         enabled = true
