--- a/waybar-dracula/config.jsonc
+++ b/waybar-dracula/config.jsonc
@@ -1,4 +1,4 @@
-// -*- mode: jsonc -*-
+//-*- mode: jsonc -*-
 
 {
 
@@ -14,11 +14,11 @@
        "tray",
        "hyprland/workspaces",
        "custom/media",
-    "hyprland/submap",
+    "hyprland/submap"
    ],
 
 "modules-center": [
-    "hyprland/window",
+    "hyprland/window"
 ],
 
 "modules-right": [
@@ -76,7 +76,7 @@
         "max-length": 20,
         "format-icons": {
             "spotify": "",
-            "default": "🎜",
+            "default": "🎜"
         },
         "escape": true,
 	"on-click": "playerctl play-pause",	    
@@ -124,13 +124,17 @@
 
 "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "family": "ipv4",
         "format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
+        "tooltip-format-wifi": "Interface: {ifname} \nIp address: {ipaddr} \nVia: {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
+        "tooltip-format-disconnected": "Disconnected ⚠",
         //"format-alt": "{ifname}: {ipaddr}/{cidr}",
-	"on-click": "kitty -e nmtui"
+	"on-click": "nmcli radio on & kitty -e nmtui",
+	"on-click-middle": "nmcli radio wifi off",
+	"on-click-right": "firewall-config"
     },
 
 "temperature": {
@@ -165,7 +169,7 @@
 
 "battery": {
         "states": {
-            // "good": 95,
+            "good": 95,
             "warning": 30,
             "critical": 15
         },
@@ -174,13 +178,13 @@
         "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
+        //"format-good": "", // An empty format will hide the module
+        "format-full": "",
         "format-icons": ["", "", "", "", ""]
     },
     "battery#bat2": {
         "bat": "BAT2"
     }
 
-}
-]
+}  
+//]
