--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -205,7 +205,7 @@ decoration {
 
     rounding = 6
 
-#screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 blur {
         enabled = true
