minor configuration updates
Added hyprpaper config file, and made some changers to hyprlock config

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,6 +1,7 @@
 background {
   monitor = 
-  path = ~/dotfiles/hypr/images/404-page_not_found.png
+  #path = ~/dotfiles/hypr/images/404-page_not_found.png
+  path = ~/.local/share/wallpapers/Staircase.png
   color = rgba(25, 20, 20, 1.0)
   blur_passes = 2
   contrast = 1
@@ -19,7 +20,7 @@ general {
 
 input-field {
   monitor = 
-  size = 500, 120
+  size = 500, 100
   outline_thickness = 2 
   dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
   dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
@@ -27,12 +28,12 @@ input-field {
   outer_color = rgba(0, 0, 0, 0)
   inner_color = rgba(0, 0, 0, 0.2)
   font_color = rgba(255, 255, 255, 1)
-  fade_on_empty = false
+  fade_on_empty = true
   rounding = -1
   check_color = rgb(204, 136, 34)
   placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
   hide_input = false
-  position = 0, -250
+  position = 0, -275
   halign = center
   valign = center
 }
@@ -64,7 +65,8 @@ label {
 # Profile Picture
 image {
     monitor =
-    path = ~/dotfiles/hypr/images/Techno-Geek.png
+    #path = ~/dotfiles/hypr/images/Techno-Geek.png
+    path = ~/Pictures/Art/Digital-art/Seize-700.png
     size = 400
     border_size = 2
     position = 0, 0
