--- a/waybar-dracula/config.jsonc
+++ b/waybar-dracula/config.jsonc
@@ -34,9 +34,9 @@
 ],
 
 "clock": {
-    // "timezone": "America/New_York",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "format-alt": "{:%Y-%m-%d}"
+    //"format-alt": "{:%Y-%m-%d}",
+    "on-click": "$HOME/dotfiles/waybar/scripts/time-notif.sh"
 },
 
 "custom/rofi": {
