--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -301,3 +301,9 @@ windowrulev2 = bordercolor rgb(ff5555),xwayland:1
 windowrulev2 = suppressevent maximize, class:.*
 
 windowrulev2 = float,class:^(yad)$
+
+windowrulev2 = workspace 1,class:^(yad)$
+
+windowrulev2 = workspace 7,class:^(steam)$
+
+windowrulev2 = workspace 8,class:^(librewolf)$
