Added window rule for emacs

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -205,7 +205,7 @@ decoration {
 
     rounding = 6
 
-######screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+###########screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 blur {
         enabled = true
@@ -303,6 +303,8 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = float,class:^(yad)$
 
 windowrulev2 = workspace 1,class:^(yad)$
+
+windowrulev2 = workspace 3,class:^(emacs)$
 
 windowrulev2 = workspace 7,class:^(steam)$
 
