--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,3 +1,4 @@
+env = WLR_NO_HARDWARE_CURSORS, 1
 $mainMod = SUPER
 $terminal = kitty
 $menu = rofi -show combi -combi-modi drun,run,recursivebrowser 
@@ -205,7 +206,7 @@ decoration {
 
     rounding = 6
 
-#screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#############screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 
 blur {
         enabled = true
