--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -206,7 +206,7 @@ decoration {
 
     rounding = 6
 
-#############screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+#screen_shader = ~/dotfiles/hypr/shaders/greyscale-shader.glsl
 
 blur {
         enabled = true
