--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -194,7 +194,7 @@ bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 monitor=,preferred,auto,auto
 
-monitor=eDP-1, 3840x2160@60.0020, 0x0, 2
+monitor=eDP-1, 3840x2160@60.0020, 0x0, 1.5
 
 monitor=DP-5, 1920x1200@59.9500, auto-up, 1
 
@@ -310,3 +310,6 @@ windowrulev2 = workspace 3,class:^(emacs)$
 windowrulev2 = workspace 7,class:^(steam)$
 
 windowrulev2 = workspace 8,class:^(librewolf)$
+
+windowrulev2 = noscreenshare, class:^(org.keepassxc.KeePassXC)
+windowrulev2 = noscreenshare, class:^(com.belmoussaoui.Authenticator)
