Updated Hyprland config
added more window rules

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,9 +1,10 @@
-env = WLR_NO_HARDWARE_CURSORS, 1
+env = WLR_NO_HARDWARE_CURSORS,1
 $mainMod = SUPER
 $terminal = kitty
 $menu = rofi -show combi -combi-modi drun,run,recursivebrowser 
 $filemenu = rofi -show combi -combi-modi window,recursivebrowser,ssh 
 $editor = emacsclient -ca ""
+$controlpanel = ~/.local/bin/overrides-gui
 
 $fileManager = thunar
 $browser = xdg-open about:profiles
@@ -44,6 +45,7 @@ ecosystem:enforce_permissions = true
 
 permission = /usr/bin/grim, screencopy, allow
 permission = /usr/bin/hyprshot, screencopy, allow
+permission = /usr/bin/hyprlock, screencopy, allow
 permission = /usr/bin/hyprpicker, screencopy, allow
 permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, ask
 
@@ -81,6 +83,7 @@ bind = $mainMod, E, exec, $editor
 bind = $mainMod, M, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, O, exec, $controlpanel
 bind = ALT, TAB, exec, $filemenu
 bind = $mainMod $shiftmod, C, exec, ~/dotfiles/hypr/scripts/reloads.sh
 
@@ -206,7 +209,7 @@ decoration {
 
     rounding = 6
 
-#screen_shader = ~/dotfiles/hypr/shaders/greyscale-shader.glsl
+##########screen_shader = ~/dotfiles/hypr/shaders/greyscale-shader.glsl
 
 blur {
         enabled = true
@@ -305,7 +308,14 @@ windowrulev2 = float,class:^(yad)$
 
 windowrulev2 = workspace 1,class:^(yad)$
 
+windowrulev2 = workspace 2,title:^(HD's Personal Documentation)$
+
 windowrulev2 = workspace 3,class:^(emacs)$
+
+windowrulev2 = workspace 3,title:^(GitHub)$
+
+windowrulev2 = workspace 4,class:^(com.github.iwalton3.jellyfin-media-player)$  
+windowrulev2 = workspace 4,title:^(Spotify)$
 
 windowrulev2 = workspace 7,class:^(steam)$
 
